--- a/starwars/app/build.gradle
+++ b/starwars/app/build.gradle
@@ -8,7 +8,7 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.example.davidarribas.starwars"
-        minSdkVersion 15
+        minSdkVersion 23
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -31,7 +31,15 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
+    //Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
     implementation 'com.android.support:recyclerview-v7:28.0.0-alpha3'
+
+    //Desing
+    implementation 'com.github.florent37:arclayout:1.0.3'
+    implementation 'com.flaviofaria:kenburnsview:1.0.7'
+
+    //Picasso
+    implementation 'com.squareup.picasso:picasso:2.71828'
 }
