--- a/starwars/app/build.gradle
+++ b/starwars/app/build.gradle
@@ -24,7 +24,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     implementation 'com.android.support:appcompat-v7:28.0.0-alpha3'
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     testImplementation 'junit:junit:4.12'
@@ -42,4 +42,13 @@ dependencies {
 
     //Picasso
     implementation 'com.squareup.picasso:picasso:2.71828'
+
+    //Firebase
+    implementation 'com.google.firebase:firebase-core:16.0.0'
+
+    //RX Java
+    implementation "io.reactivex.rxjava2:rxjava:2.2.0"
+
 }
+
+apply plugin: 'com.google.gms.google-services'
